--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/DenDB
-
 spring.datasource.username=postgres
-
 spring.datasource.password=admin
-
 spring.jpa.database-platform= org.hibernate.dialect.PostgreSQLDialect
-
 spring.jpa.hibernate.ddl-auto=update
+management.endpoint.info.enabled=true
+management.endpoint.beans.enabled=true
+management.endpoint.health.enabled=true
+management.endpoints.web.exposure.include=health, beans, info
